# IMC-Calculator-Program

./: README.md  app.py  build.bat  build.sh  pyproject.toml
src/: app.py
src/constants/: messages.py
src/core/: imc_calculator.py
src/models/: InterfaceApp.py  interface_app.py
src/ui/: interface_app.py  styles.py
src/ui/components/: labeled_entry.py
src/ui/views/: main_view.py
src/utils/: constants.py  helpers.py  messages.py  styles.py
test/: conftest.py
test/test_constants/: test_messages.py
test/test_core/: test_imc_calculator.py
test/test_models/: test_InterfaceApp.py  test_interface_app.py
test/test_ui/: test_interface_app.py  test_styles.py
test/test_ui/test_components/: test_labeled_entry.py
test/test_ui/test_views/: test_main_view.py
test/test_utils/: test_helpers.py
tests/test_configs/: test_default_config.py  test_development_config.py  test_logger_config.py  test_production_config.py  test_testing_config.py
tests/test_constants/: test_messages.py
tests/test_ui/: test_interface_app.py  test_styles.py
tests/test_ui/test_components/: test_labeled_entry.py
tests/test_ui/test_views/: test_main_view.py
tests/test_utils/: test_dialogs.py  test_error_handler.py  test_helpers.py
